--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,44 @@
-# 核心依赖
-streamlit==1.45.1
-pandas==2.2.2  # 明确支持 Python 3.13 的版本
 scikit-learn==1.5.0  # 最新稳定版，兼容 Python 3.13
-numpy==2.0.0  # 与 scikit-learn 1.5.0 兼容的版本
-Pillow>=10.0.0  # 图片处理
-setuptools>=70.0.0  # 确保包含 distutils 功能
-# 必要工具库
-setuptools>=60.0.0
-protobuf>=6.31.1  # 升级到最新稳定版
-pyarrow>=20.0.0  # 升级到最新稳定版
+
+altair==5.5.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+gitdb==4.0.12
+GitPython==3.1.44
+idna==3.10
+Jinja2==3.1.6
+joblib==1.5.1
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+MarkupSafe==3.0.2
+narwhals==1.42.1
+numpy==2.3.0
+packaging==24.2
+pandas==2.3.0
+pillow==11.2.1
+protobuf==6.31.1
+pyarrow==20.0.0
+pydeck==0.9.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
-
-# 其他显式依赖（仅保留你的代码直接调用的库）
+referencing==0.36.2
+requests==2.32.4
+rpds-py==0.25.1
+scikit-learn==1.7.0
+scipy==1.15.3
+six==1.17.0
+smmap==5.0.2
+streamlit==1.45.1
 tenacity==9.1.2
+threadpoolctl==3.6.0
+toml==0.10.2
+tornado==6.5.1
+typing_extensions==4.14.0
+tzdata==2025.2
+urllib3==2.4.0
 watchdog==6.0.0
